# dotfiles

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .tool-versions  Dockerfile  Dockerfile.light  README.md  common.conf.yaml  full.conf.yaml  install  light.conf.yaml  linux.conf.yaml  mac.conf.yaml  mise.toml  pyproject.toml
config/: .asdfrc  .profile  .tmux.conf  .tool-versions  .zprofile  starship.toml
config/direnv/: direnv.toml
config/direnv/file/: github  gitlab  nas  work
config/fnox/: gitlab.toml  global.toml  nas.toml  work.toml
config/mise/: config.toml  gitlab.toml  global.toml  nas.toml  work.toml
config/nvim/lua/config/: lazy.lua  options.lua
config/nvim/lua/plugins/: colorscheme.lua
config/tmux/: tmux.conf
config/zsh/: .zsh_plugins.txt  .zshrc  aliases.zsh  functions.zsh  history.zsh  import-plugins.zsh  setup-antigen.zsh
docs/: README.tpl  apt_packages.yml  asdf_packages.yml  brew_packages.yml  extract_packages.py  mise_packages.yml
