[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = "Personal dotfiles management and documentation generation"
authors = ["SQuent <q.sallio@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.13"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
extract-packages = "docs.extract_packages:main"
generate-readme = "docs.generate_readme:main"